[package]
name = "rust-sawtooth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sawtooth-sdk = "0.5.2" 
sha2 = "0.10"
hex = "0.4"
clap = "2"
log = "0.4"
log4rs = "0.8"
cbor-codec = "0.7"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
serde_json = "1.0"
serde_cbor = "0.11.2"
bytes = "1"
protobuf="2.23"
openssl="0.10.40"
rand="0.8.4"
reqwest = {version = "0.11.10", features=["json"]}
