[package]
name = "sawtooth-twit-tp-rust"
version = "0.5.3"
authors = ["Bitwise IO, Inc."]
license = "Apache-2.0"
description = """\
    Sawtooth Intkey is a Sawtooth transaction handler for executing intkey \
    transactions as part of Hyperledger Sawtooth\n
"""

[[bin]]
name = "twit-tp-rust"
path = "src/main.rs"

[lib]
name = "sawtooth_twit"
path = "src/lib.rs"

[dependencies]
sawtooth-sdk = "0.5.2" 
sha2 = "0.10"
hex = "0.4"
clap = "2"
log = "0.4"
log4rs = "0.8"
cbor-codec = "0.7"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
serde_json = "1.0"
serde_cbor = "0.11.2"
bytes = "1"
async-channel="1.6.1"
postgres="0.19.3"
tokio-postgres = '0.7.6'
bb8="0.8.0"
bb8-postgres= "0.8.0"

[features]
default = []

stable = []

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]

