[package]
name = "url-streamer"
version = "0.1.0"
edition = "2021"
authors = ["Sami Amer <contact@sami.ps>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
reqwest = {version = "0.11.10", features=["json"]}
serde = { version = "1.0", features = ["derive"] }
log = "0.4.7"
env_logger = "0.9.0"
serde_json = "1.0"
bytes = "1"
async-channel="1.6.1"
postgres="0.19.3"
tokio-postgres = '0.7.6'
bb8="0.8.0"
bb8-postgres= "0.8.0"