[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Sami Amer <contact@sami.ps>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
redis = "0.21.5"
postgres = "0.19.2"